# tetris_sfml

./: CMakeLists.txt  README.md  block.cpp  block.h  main.cpp
include/: block.h
src/: block.cpp  blocksarray.cpp  fontarray.cpp  iconarray.cpp  main.cpp
